chore: add mobx and ListOfStoreCategory Component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "commentTranslate.targetLanguage": "es"
+    "commentTranslate.targetLanguage": "es",
+    "js/ts.implicitProjectConfig.checkJs": true,
 }
