--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "mobx": "^6.3.13",
+        "mobx-react-lite": "^3.2.3",
         "next": "12.0.10",
         "next-pwa": "^5.4.4",
         "react": "17.0.2",
