--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mui/styled-engine-sc": "^5.3.0",
         "@types/faker": "^5.5.3",
         "faker": "^5.5.3",
+        "google-map-react": "^2.1.10",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
         "next": "12.0.10",
