--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.4.0",
         "@mui/styled-engine-sc": "^5.3.0",
-        "@types/faker": "^5.5.3",
-        "faker": "^5.5.3",
+        "@skapxd/debounce": "^1.0.15",
+        "@types/faker": "5.5.3",
+        "faker": "5.5.3",
         "google-map-react": "^2.1.10",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
