--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "@mui/material": "^5.4.0",
         "@mui/styled-engine-sc": "^5.3.0",
         "@skapxd/debounce": "^1.0.15",
-        "@skapxd/regex-validate": "^1.0.0",
-        "@skapxd/regexp-validate": "^1.0.0",
+        "@skapxd/validate": "^2.0.0",
         "@types/faker": "5.5.3",
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
@@ -26,7 +25,8 @@
         "react-dom": "17.0.2",
         "sass": "^1.49.7",
         "styled-components": "^5.3.3",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "validator": "^13.7.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^16.1.0",
