build: add getStaticProps to index of page folder

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "jsx": "react-jsx",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "target": "ES2015",
+        "module": "CommonJS"
     }
 }
