feat: add home page of store

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@skapxd/debounce": "^1.0.15",
         "@skapxd/validate": "^2.0.0",
         "@types/faker": "5.5.3",
+        "date-fns": "^2.28.0",
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
         "mobx": "^6.3.13",
