--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
         "@mui/material": "^5.4.0",
         "@mui/styled-engine-sc": "^5.3.0",
         "@skapxd/debounce": "^1.0.15",
-        "@skapxd/validate": "^2.0.1",
+        "@skapxd/validate": "^2.0.3",
         "@types/faker": "5.5.3",
         "date-fns": "^2.28.0",
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
+        "jsonwebtoken": "^8.5.1",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
-        "next": "12.0.10",
+        "next": "^12.1.0",
         "next-pwa": "^5.4.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -35,7 +36,7 @@
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10",
         "husky": "^7.0.4",
-        "pwa-asset-generator": "^6.0.6"
+        "pwa-asset-generator": "^4.3.2"
     },
     "commitlint": {
         "extends": [
