--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
         "jsonwebtoken": "^8.5.1",
+        "memory-cache": "^0.2.0",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
         "next": "^12.1.0",
         "next-pwa": "^5.4.4",
+        "nodemailer": "^6.7.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "sass": "^1.49.7",
