--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "all_app",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -14,6 +14,7 @@
         "@mui/styled-engine-sc": "^5.3.0",
         "@skapxd/debounce": "^1.0.15",
         "@skapxd/validate": "^2.0.3",
+        "@supabase/supabase-js": "^1.30.7",
         "@types/faker": "5.5.3",
         "date-fns": "^2.28.0",
         "faker": "5.5.3",
@@ -22,6 +23,7 @@
         "memory-cache": "^0.2.0",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
+        "mongoose": "^6.2.4",
         "next": "^12.1.0",
         "next-pwa": "^5.4.4",
         "nodemailer": "^6.7.2",
@@ -35,10 +37,12 @@
     "devDependencies": {
         "@commitlint/cli": "^16.1.0",
         "@commitlint/config-conventional": "^16.0.0",
+        "cross-env": "^7.0.3",
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10",
         "husky": "^7.0.4",
-        "pwa-asset-generator": "^4.3.2"
+        "pwa-asset-generator": "^4.3.2",
+        "vercel": "^24.0.0"
     },
     "commitlint": {
         "extends": [
