chore: remove ssr to store font page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
         "jsonwebtoken": "^8.5.1",
+        "markdown-to-jsx": "^7.1.7",
         "memory-cache": "^0.2.0",
         "mobx": "^6.3.13",
         "mobx-react-lite": "^3.2.3",
