--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "scripts": {
         "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+        "dev:ssl": "local-ssl-proxy --source 3001 --target 3000",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -42,6 +43,7 @@
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10",
         "husky": "^7.0.4",
+        "npm-run-all": "^4.1.5",
         "pwa-asset-generator": "^4.3.2",
         "vercel": "^24.0.0"
     },
