refactor: create struc of folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "commentTranslate.targetLanguage": "es",
   "js/ts.implicitProjectConfig.checkJs": true,
   "cSpell.language": "en,es-ES",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cSpell.words": ["Postgrest", "supabase"]
 }
