--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@skapxd/validate": "^2.0.3",
         "@supabase/supabase-js": "^1.30.7",
         "@types/faker": "5.5.3",
+        "base64-arraybuffer": "^1.0.2",
         "date-fns": "^2.28.0",
         "faker": "5.5.3",
         "google-map-react": "^2.1.10",
