--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "js/ts.implicitProjectConfig.checkJs": true,
   "cSpell.language": "en,es-ES",
   "editor.formatOnSave": true,
+  "editor.tabSize": 2,
   "cSpell.words": ["Postgrest", "supabase"]
 }
