feat: add lading user data when login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "cSpell.language": "en,es-ES",
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
-  "cSpell.words": ["Postgrest", "supabase"]
+  "cSpell.words": ["Postgrest", "skapxd", "supabase"]
 }
