--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
   "cSpell.language": "en,es-ES",
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
-  "cSpell.words": ["Postgrest", "skapxd", "supabase"],
+  "cSpell.words": ["eruda", "Postgrest", "skapxd", "supabase"],
   "files.eol": "\n"
 }
