--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@commitlint/cli": "^16.1.0",
         "@commitlint/config-conventional": "^16.0.0",
         "cross-env": "^7.0.3",
+        "eruda": "^2.4.1",
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10",
         "husky": "^7.0.4",
