--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "eslint": "8.8.0",
         "eslint-config-next": "12.0.10",
         "husky": "^7.0.4",
+        "mjml": "^4.12.0",
         "npm-run-all": "^4.1.5",
         "pwa-asset-generator": "^4.3.2",
         "vercel": "^24.0.0"
